# CtrlF_Backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  setup.cfg
.elasticbeanstalk/: config.yml
.github/: checks.yml  prlint.json
.github/workflows/: checks.yml
django_girls_tutorial/: README.md
django_girls_tutorial/jinho/djangogirls/: python_intro.py
django_girls_tutorial/sehwa/: README.md
django_girls_tutorial/sehwa/Step1/: README.md
django_girls_tutorial/step1/jingu/: README.md
django_girls_tutorial/step1/jinho/: README.md
django_girls_tutorial/step2/: README.md
django_girls_tutorial/step3/: README.md
scripts/: commit-msg
src/: requirements.txt
src/config/: settings.py  urls.py
src/cs_wiki/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
src/cs_wiki/migrations/: 0001_initial.py
system_settings/: nginx.conf  supervisor.conf  uwsgi.ini
v2/: README.md
v2/src/: manage.py
v2/src/.elasticbeanstalk/: config.yml
v2/src/blog/: serializers.py  urls.py  views.py
v2/src/common/: exceptions.py  models.py
v2/src/config/: backends.py  celery.py  db.sqlite3  urls.py  wsgi.py
v2/src/ctrlf_auth/: admin.py  apps.py  authentication.py  constants.py  helpers.py  models.py  serializers.py  swagger.py  tasks.py  urls.py  views.py
v2/src/ctrlfbe/: action_urls.py  admin.py  apps.py  basedata.py  constants.py  issue_urls.py  mixins.py  models.py  note_urls.py  page_urls.py  paginations.py  serializers.py  swagger.py  test.py  topic_urls.py  urls.py  views.py
v2/src/tests/: test_auth.py  (+12 more)
(+134 files in other folders)
